# HDpip

./: .coverage  .gitignore  .pylintrc  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  SECURITY.md  build_mkdocs.py  clean_pycache.py  clean_whitespace.py  coverage.xml  coverage_upload.py  dist.py  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  font.setting  fork.py  index.html  junit.xml  local_install.py  mkdocs.yml  objects.inv  pipgui.py  pylint.py  pyproject.toml  requirements.txt  sitemap.xml  upload.py
.clinerules/: code.md  role.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: coverage.yml  coverage.yml.txt  github-pages.yml  publish.yml  python-publish.yml  release.yml
CHANGELOG/: index.html
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
HDpip/: README.md  __init__.py  main.py
HDpip.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
HDpip/core/: __init__.py  base.py  pip_api.py  pyi.py
HDpip/gui/: __init__.py  base.py  (+4 more)
LICENSE/: index.html
SECURITY/: index.html
blog/: index.html
docs/: index.md
downloads/: index.html
en/: 404.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  sitemap.xml
overrides/: blog.html  main.html  statistics_template.html
search/: search_index.json
test/: buttons.py  core.py  dialog_demo.py  error.py  treeview_demo.py
tests/: conftest.py  test_buttons.py  test_core.py  test_dialog.py  test_error.py  test_pt_to_px_demo.py  test_treeview.py
(+28 files in other folders)
