[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HDpip"
version = "0.0.4"
description = "寒冬pip(HDpip)"
readme = "HDpip/README.md"
license = { file = "LICENSE" }
authors = [
    {name = "寒冬利刃(handongliren(hdlr))", email = "1079489986@qq.com"},
]
requires-python = ">=3.10"
dependencies = [
    "pip>=25.2",
    "maliang[opt]>=3.1.0",
    "pyyaml",
    "pipdeptree>=2.0.0"
]
keywords = ["pip", "gui", "maliang", "hdlr", "寒冬利刃", "handongliren"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://hdlr.maozi.io"
Repository = "https://gitee.com/handongliren/HDpip"
Documentation = "https://gitee.com/handongliren/HDpip-doc"
Changelog = "https://gitee.com/handongliren/HDpip/CHANGELOG.md"
Issue = "https://gitee.com/handongliren/HDpip/issues"

[project.gui-scripts]
HDpip = "HDpip.main:main"
hdpip = "HDpip.main:main"

[tool.setuptools.packages.find]
include = ["HDpip*"]

[tool.setuptools.package-data]
"HDpip" = ["**"]

[tool.setuptools.exclude-package-data]
"HDpip" = ["__pycache__/*", "**/__pycache__/*"]
